--- a/concert tickets.css
+++ b/concert tickets.css
@@ -239,7 +239,7 @@ img{display:block; max-width:100%}
   margin:0 0 10px;
   font-size:28px;
   line-height:1.35;
-  color:#e8e6e3;
+  color:black;
   font-weight:700;
 }
 .meta{
@@ -262,7 +262,7 @@ img{display:block; max-width:100%}
 
 .event-desc{
   margin:0;
-  color:#e8e6e3;
+  color:black;
   line-height:1.6;
   opacity:.9;
 }
@@ -457,7 +457,7 @@ img{display:block; max-width:100%}
 .start-title {
   font-size: 2rem;
   font-weight: 700;
-  color:#ffffff;
+  color:black;
   text-align: center;
   margin: 0;
 }
@@ -497,7 +497,7 @@ img{display:block; max-width:100%}
 }
 
 .contact-text {
-  color: #ffffff;
+  color: black;
   font-size: 18px;
   margin: 0;
   line-height: 1.5;
