--- a/home.css
+++ b/home.css
@@ -448,7 +448,7 @@ img{display:block; max-width:100%}
   gap:10px;
   font-size:22px;
   font-weight:800;
-  color:orange;
+  color:#ff8a00;
 }
 
 /* gạch cam */
